--- a/texmf/tex/latex/styles/random.sty
+++ b/texmf/tex/latex/styles/random.sty
@@ -77,25 +77,11 @@
     \unimathsetup{math-style=TeX}
     \RequirePackage[english]{babel}
     \defaultfontfeatures{Ligatures=TeX, Scale=MatchLowercase}
-    \setmainfont[
-    Path=/usr/share/fonts/opentype/linux-libertine/,
-    Extension=.otf,
-    BoldFont=LinLibertine_RB,
-    ItalicFont=LinLibertine_RI,
-    ]{LinLibertine_R}
-    \setsansfont[
-    Path=/mnt/c/Users/ekoor/Appdata/Local/Microsoft/Windows/Fonts/,
-    Extension=.otf,
-    BoldFont=Kurier-Bold,
-    ItalicFont=Kurier-Italic,
-    ]{Kurier-Regular}
-    \setmonofont[
-    Path=/mnt/c/Users/ekoor/Appdata/Local/Microsoft/Windows/Fonts/,
-    Extension=.ttf,
-    BoldFont=Inconsolata-Bold,
-    ]{Inconsolata-Regular}
-    \unimathsetup{math-style=TeX
-    \setmathfont{LibertinusMath-Regular.otf}
+    \setmainfont{Linux Libertine O}
+    \setsansfont{Kurier}
+    \setmonofont{Inconsolata}
+    \unimathsetup{math-style=TeX}
+    \setmathfont{Libertinus Math}
     \RequirePackage{sectsty}
     \allsectionsfont{\sffamily}
 \fi
