--- a/texmf/tex/latex/styles/random.sty
+++ b/texmf/tex/latex/styles/random.sty
@@ -392,6 +392,7 @@
 
 % ----- Math -----
 \DeclareMathOperator{\proj}{proj}  % Projection
+%\DeclareMathOperator{\span}{span}
 \DeclareMathOperator{\range}{range}  % Range (span of columns)
 \DeclareMathOperator{\Range}{R}  % range
 \DeclareMathOperator{\Null}{N}  % Null space
